--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ol>
     </nav>
 
-    <span style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; Ashoka  <i class="fa-solid fa-fire"></i></span>
+    <span style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; Home  <i class="fa-solid fa-fire"></i></span>
 
     <!--Banner-->
     <div>
